--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
         </section>
         <main class="main">
             <h2 class="main__h2">Stock Disponible</h2>
-            <a href="#" class="main__a">90 Piezas</a>
-            <a href="215.html" class="main__a">215 Piezas</a>
+            <p class="main__p">¡Revisá nuestros modelos disponibles en este momento!</p>
+            <p class="main__p main__p-light">Podes hacer click en la imagén para ver el modelo con más detalle.</p>
+            <p class="main__p main__p-light">Si la
+                imagen se encuentra en color gris es porque no tenemos disponible ese modelo en este momento.</p>
+            <p class="main__p main__p-seleccion">Seleccioná la cantidad de piezas:</p>
+            <a href="#" class="main__a main__a-90">90 Piezas</a>
+            <a href="215.html" class="main__a main__a-215">215 Piezas</a>
             <img src="./assets/90.svg" alt="Logo 90 Piezas" class="main__img">
             <div class="imgs-container">
                 <!-- <img src="./assets/90pc/Baby Animal/CAJA_90pc_BabyAnimal_Guepardo.png" alt=""> -->
-                <!-- Aquí se insertarán las tarjetas desde el script -->
             </div>
         </main>
     </div>
