--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <main class="main">
             <h2 class="main__h2">Stock Disponible</h2>
-            <p class="main__p">¡Revisá nuestros modelos disponibles en este momento!</p>
+            <p class="main__p">¡Revisá nuestros modelos disponibles!</p>
             <p class="main__p main__p-light">Podes hacer click en la imagén para ver el modelo con más detalle.</p>
             <p class="main__p main__p-light">Si la
                 imagen se encuentra en color gris es porque no tenemos disponible ese modelo en este momento.</p>
