--- a/215.html
+++ b/215.html
@@ -24,31 +24,15 @@
         </section>
         <main class="main">
             <h2 class="main__h2">Stock Disponible</h2>
-            <a href="index.html" class="main__a">90 Piezas</a>
-            <a href="#" class="main__a">215 Piezas</a>
+            <p class="main__p">¡Revisá nuestros modelos disponibles!</p>
+            <p class="main__p main__p-light">Podes hacer click en la imagén para ver el modelo con más detalle.</p>
+            <p class="main__p main__p-light">Si la
+                imagen se encuentra en color gris es porque no tenemos disponible ese modelo en este momento.</p>
+            <p class="main__p main__p-seleccion">Seleccioná la cantidad de piezas:</p>
+            <a href="index.html" class="main__a main__a-90">90 Piezas</a>
+            <a href="#" class="main__a main__a-215">215 Piezas</a>
             <img src="./assets/215.svg" alt="Logo 90 Piezas" class="main__img">
             <div class="imgs-container">
-                <div class="card" data-stock="1">
-                    <img src="./assets/puzzle1.jpg" alt="Imagen de Puzzle" class="puzzle-img"
-                        data-full-img="./assets/puzzle1-full.jpg">
-                    <h3 class="card__h3">León</h3>
-                    <p class="card__p">Código: 9001</p>
-                    <p class="card__p">Stock: 1</p>
-                </div>
-                <div class="card" data-stock="0">
-                    <img src="./assets/puzzle2.jpg" alt="Imagen de Puzzle" class="puzzle-img"
-                        data-full-img="./assets/puzzle2-full.jpg">
-                    <h3 class="card__h3">Tigre</h3>
-                    <p class="card__p">Código: 9002</p>
-                    <p class="card__p">Stock: 0</p>
-                </div>
-                <div class="card" data-stock="5">
-                    <img src="./assets/puzzle3.jpg" alt="Imagen de Puzzle" class="puzzle-img"
-                        data-full-img="./assets/puzzle3-full.jpg">
-                    <h3 class="card__h3">Elefante</h3>
-                    <p class="card__p">Código: 9003</p>
-                    <p class="card__p">Stock: 5</p>
-                </div>
             </div>
         </main>
     </div>
@@ -58,7 +42,7 @@
         <img id="fullscreen-img" class="fullscreen-img" alt="Imagen Ampliada">
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/215.js"></script>
 </body>
 
 </html>
