--- a/215.html
+++ b/215.html
@@ -42,7 +42,7 @@
         <img id="fullscreen-img" class="fullscreen-img" alt="Imagen Ampliada">
     </div>
 
-    <script src="./js/215.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
