Finished sorted options and responsive view

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
             <a href="#" class="main__a main__a-90">90 Piezas</a>
             <a href="215.html" class="main__a main__a-215">215 Piezas</a>
             <img src="./assets/90.svg" alt="Logo 90 Piezas" class="main__img">
+            <p class="main__p main__p-light main__p-order">Ordenar por:</p>
+            <div class="sort-options">
+                <div class="input-container">
+                    <input type="radio" id="all" name="sort" value="all">
+                    <label for="all">Todos</label>
+                </div>
+
+                <div class="input-container">
+                    <input type="radio" id="available" name="sort" value="available" checked>
+                    <label for="available">Disponibles</label>
+                </div>
+
+                <div class="input-container">
+                    <input type="radio" id="out-of-stock" name="sort" value="out-of-stock">
+                    <label for="out-of-stock">Sin Stock</label>
+                </div>
+            </div>
             <div class="imgs-container">
             </div>
         </main>
