apply section panfleto

--- a/215.html
+++ b/215.html
@@ -52,6 +52,11 @@
             <div class="imgs-container">
             </div>
         </main>
+        <section class="section-panfleto">
+            <p class="main__p">¡Todos los modelos incluyen un panfleto informativo!</p>
+            <p class="main__p main__p-light">Para leer y aprender más sobre animales y lugares.</p>
+            <img class="section-panfleto__img" src="./assets/Panfleto.jpg" alt="Imagen de un Panfleto Informativo">
+        </section>
     </div>
 
     <div id="fullscreen-overlay" class="fullscreen-overlay">
