--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
             <p class="main__p main__p-light">Para leer y aprender más sobre animales y lugares.</p>
             <img class="section-panfleto__img" src="./assets/Panfleto.jpg" alt="Imagen de un Panfleto Informativo">
         </section>
+        <footer class="footer">
+            <small class="footer__small">
+                <span class="footer__span">
+                    <a class="footer__a footer__a-red" target="_blank" href="index.html">Geopuzzles &reg;
+                    </a>
+                </span>
+            </small>
+            <small class="footer__small footer__small-separator">|</small>
+            <small class="footer__small">Un producto de
+                <span class="footer__span">
+                    <a class="footer__a footer__a-blue" target="_blank" href="https://plastimold.com.ar/">Plastimold SRL
+                        &reg;
+                    </a>
+                </span>
+            </small>
+            <small class="footer__small footer__small-separator">|</small>
+            <small class="footer__small">Todos los derechos reservados.</small>
+        </footer>
     </div>
 
     <div id="fullscreen-overlay" class="fullscreen-overlay">
