--- a/215.html
+++ b/215.html
@@ -12,7 +12,7 @@
 <body class="body">
     <div class="page-container">
         <header class="header">
-            <a class="header__a" href="#">
+            <a class="header__a" href="index.html">
                 <img src="./assets/logo-gp.svg" alt="Logo-GeoPuzzles" class="header__img">
             </a>
             <h1 class="header__h1">Geo Puzzles</h1>
