--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control Stock - Geopuzzles</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
@@ -14,6 +13,25 @@
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <!-- Primary Meta Tags -->
+    <title>Control de Stock - Geopuzzles</title>
+    <meta name="title" content="Control de Stock - Geopuzzles" />
+    <meta name="description" content="¡Revisá nuestros modelos disponibles en este momento!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Control de Stock - Geopuzzles" />
+    <meta property="og:description" content="¡Revisá nuestros modelos disponibles en este momento!" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Control de Stock - Geopuzzles" />
+    <meta property="twitter:description" content="¡Revisá nuestros modelos disponibles en este momento!" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
 </head>
 
 <body class="body">
